# 7-Zip-JBinding-4Android

./: .gitignore  README.md  build.gradle  settings.gradle
sevenzipjbinding/: CMakeLists.txt  build.gradle
sevenzipjbinding/src/androidTest/assets/testdata/multiple-files/cab/: readme.txt
sevenzipjbinding/src/androidTest/assets/testdata/simple/nsis/scripts/: archive1.nsi  archive2.nsi  archive3.nsi
sevenzipjbinding/src/androidTest/java/net/sf/sevenzipjbinding/junit/: ExtractFileAbstractTest.java  JUnitTestBase.java
sevenzipjbinding/src/androidTest/java/net/sf/sevenzipjbinding/junit/bug/: OpenMultipartCabWithNonVolumedCallbackTest.java  RarPasswordToLongCrash.java  WrongCRCGetterInSimpleInterface.java
sevenzipjbinding/src/androidTest/java/net/sf/sevenzipjbinding/junit/compression/: CompressGenericSingleFileAbstractTest.java  CompressMultipleFileAbstractTest.java  CompressNonGenericSingleFileAbstractTest.java  CompressSingleFileAbstractTest.java  StandaloneCompressBZip2Test.java  StandaloneCompressGZipTest.java  StandaloneCompressSevenZipTest.java  StandaloneCompressTarTest.java  StandaloneCompressZipTest.java  StandaloneUpdateArchiveRemoveTest.java  StandaloneUpdateArchiveUpdateContentTest.java  StandaloneUpdateNonGeneric7zTest.java  UpdateMultipleFilesAbstractTest.java
sevenzipjbinding/src/androidTest/java/net/sf/sevenzipjbinding/junit/encoding/: UnicodeFilenamesInArchive.java
sevenzipjbinding/src/androidTest/java/net/sf/sevenzipjbinding/junit/initialization/: InitializationDoesNotVerifyArtifactsTest.java  StandardInitializationTest.java  VersionTest.java
sevenzipjbinding/src/androidTest/java/net/sf/sevenzipjbinding/junit/jbindingtools/: ExceptionHandlingTest.java
sevenzipjbinding/src/androidTest/java/net/sf/sevenzipjbinding/junit/multiplefiles/: ExtractMultipleFileAbstractTest.java  ExtractMultipleFileCabVolumeWithoutVolumedTest.java  ExtractMultipleFileDebTest.java  ExtractMultipleFileLzhTest.java  ExtractMultipleFileXarTest.java
sevenzipjbinding/src/androidTest/java/net/sf/sevenzipjbinding/junit/singlefile/: ExtractSingleFileAbstractTest.java  ExtractSingleFileLzhTest.java  ExtractSingleFileNsisSolidTest.java  (+2 more)
sevenzipjbinding/src/main/: AndroidManifest.xml
sevenzipjbinding/src/main/assets/: sevenzipjbinding-platforms.properties
sevenzipjbinding/src/main/assets/Linux-arm/: sevenzipjbinding-lib.properties
sevenzipjbinding/src/main/cpp/: tags
sevenzipjbinding/src/main/cpp/7zip/CPP/7zip/Common/: StreamObjects.cpp
sevenzipjbinding/src/main/cpp/7zip/CPP/Common/: NewHandler.h
sevenzipjbinding/src/main/cpp/doc/web/: compression_snippets.html  extraction_snippets.html  first_steps.html  index.html
sevenzipjbinding/src/main/cpp/doc/web.components/snippets/: CompressNonGenericBZip2.html  UpdateAlterItems.html
sevenzipjbinding/src/main/cpp/doc/web/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
sevenzipjbinding/src/main/cpp/jbinding-cpp/: CodecTools.cpp  Debug.h  JBindingTools.cpp  JBindingTools.h  JNITools.cpp  JNITools.h  JavaStaticInfo.cpp  JavaStaticInfo.h  SevenZipJBinding.h  UnicodeHelper.h  UniversalArchiveOpenCallback.cpp  UniversalArchiveOpenCallback.h
sevenzipjbinding/src/main/cpp/jbinding-cpp/CPPToJava/: CPPToJavaAbstract.h  CPPToJavaArchiveExtractCallback.cpp  CPPToJavaArchiveExtractCallback.h  CPPToJavaArchiveOpenCallback.cpp  CPPToJavaArchiveOpenCallback.h  CPPToJavaArchiveOpenVolumeCallback.cpp  CPPToJavaArchiveOpenVolumeCallback.h  CPPToJavaArchiveUpdateCallback.cpp  CPPToJavaArchiveUpdateCallback.h  CPPToJavaCryptoGetTextPassword.cpp  CPPToJavaCryptoGetTextPassword.h  CPPToJavaInStream.cpp  CPPToJavaInStream.h  CPPToJavaOutStream.cpp  CPPToJavaOutStream.h  CPPToJavaProgress.cpp  CPPToJavaProgress.h  CPPToJavaSequentialInStream.cpp  CPPToJavaSequentialInStream.h  CPPToJavaSequentialOutStream.cpp  CPPToJavaSequentialOutStream.h
sevenzipjbinding/src/main/cpp/jbinding-cpp/JavaStatInfos/: JavaStandardLibrary.h
sevenzipjbinding/src/main/cpp/jbinding-cpp/JavaToCPP/: JavaToCPPInArchiveImpl.cpp  JavaToCPPOutArchiveImpl.cpp  JavaToCPPSevenZip.cpp
sevenzipjbinding/src/main/cpp/jbinding-cpp/PlatformMinGW/: StdAfx.h
sevenzipjbinding/src/main/cpp/jbinding-cpp/PlatformUnix/: StdAfx.h
sevenzipjbinding/src/main/cpp/jbinding-cpp/javah/: net_sf_sevenzipjbinding_SevenZip.h  net_sf_sevenzipjbinding_SevenZip_ArchiveOpenCryptoCallback.h  net_sf_sevenzipjbinding_SevenZip_DummyOpenArchiveCallback.h  net_sf_sevenzipjbinding_SevenZip_Version.h  net_sf_sevenzipjbinding_impl_InArchiveImpl.h  net_sf_sevenzipjbinding_impl_InArchiveImpl_ExtractSlowCallback.h  net_sf_sevenzipjbinding_impl_InArchiveImpl_ExtractSlowCryptoCallback.h  net_sf_sevenzipjbinding_impl_OutArchiveImpl.h
sevenzipjbinding/src/main/cpp/p7zip/Asm/x64/: 7zCrcT8U.asm
sevenzipjbinding/src/main/cpp/p7zip/Asm/x86/: 7zCrcT8U.asm
sevenzipjbinding/src/main/cpp/p7zip/GUI/help/: 7zip.hhc  7zip.hhk
sevenzipjbinding/src/main/cpp/scripts/: doDebug-Win64.bat  doRelease-Win64.bat
sevenzipjbinding/src/main/cpp/scripts/release/: maven-pom-template.xml
sevenzipjbinding/src/main/cpp/test/CTests/: JBindingTest.cpp
sevenzipjbinding/src/main/java/net/sf/sevenzipjbinding/: ArchiveFormat.java  ExtractAskMode.java  ExtractOperationResult.java  IArchiveOpenCallback.java  IArchiveOpenVolumeCallback.java  ICryptoGetTextPassword.java  IInStream.java  IOutStream.java  IProgress.java  ISequentialInStream.java  ISequentialOutStream.java  PropID.java  PropertyInfo.java  SevenZip.java  SevenZipException.java  SevenZipNativeInitializationException.java  package-info.java
sevenzipjbinding/src/main/java/net/sf/sevenzipjbinding/impl/: InArchiveImpl.java  RandomAccessFileInStream.java  RandomAccessFileOutStream.java  SequentialInStreamImpl.java  package-info.java
sevenzipjbinding/src/main/java/net/sf/sevenzipjbinding/simple/: ISimpleInArchive.java  ISimpleInArchiveItem.java  package-info.java
(+107 files in other folders)
