cmake_minimum_required(VERSION 2.8.11)

project(SevenZipJBinding)
set(TARGET 7-Zip-JBinding)

set(ROOT src/main/cpp)
set(JBINDING_SRC ${ROOT}/jbinding-cpp)
set(TEST_SRC ${ROOT}/test)
set(P7ZIP_SRC ${ROOT}/p7zip)

set(JBINDING_CPP_FILES
        ${JBINDING_SRC}/Debug.cpp
        ${JBINDING_SRC}/JNITools.cpp
        ${JBINDING_SRC}/JavaStaticInfo.cpp
        ${JBINDING_SRC}/SevenZipJBinding.cpp
        ${JBINDING_SRC}/UniversalArchiveOpenCallback.cpp
        ${JBINDING_SRC}/UserTrace.cpp
        ${JBINDING_SRC}/CodecTools.cpp
        ${JBINDING_SRC}/JBindingTools.cpp
        ${JBINDING_SRC}/JavaToCPP/JavaToCPPSevenZip.cpp
        ${JBINDING_SRC}/JavaToCPP/JavaToCPPInArchiveImpl.cpp
        ${JBINDING_SRC}/JavaToCPP/JavaToCPPOutArchiveImpl.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaArchiveExtractCallback.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaArchiveOpenCallback.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaArchiveOpenVolumeCallback.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaCryptoGetTextPassword.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaInStream.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaOutStream.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaProgress.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaSequentialInStream.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaSequentialOutStream.cpp
        ${JBINDING_SRC}/CPPToJava/CPPToJavaArchiveUpdateCallback.cpp
        )

if(CMAKE_BUILD_TYPE MATCHES Debug)
set(JBINDING_CPP_FILES
        ${JBINDING_CPP_FILES}
        ${TEST_SRC}/CTests/JniToolsTest.cpp
        ${TEST_SRC}/CTests/JBindingTest.cpp
        )
endif()

set(P7ZIP_SOURCE_FILES
        ${P7ZIP_SRC}/
        ${P7ZIP_SRC}/CPP/myWindows/myGetTickCount.cpp
        ${P7ZIP_SRC}/CPP/myWindows/wine_date_and_time.cpp
        ${P7ZIP_SRC}/CPP/myWindows/myAddExeFlag.cpp
        ${P7ZIP_SRC}/CPP/myWindows/mySplitCommandLine.cpp
        ${P7ZIP_SRC}/CPP/Common/CommandLineParser.cpp
        ${P7ZIP_SRC}/CPP/Common/CRC.cpp
        ${P7ZIP_SRC}/CPP/Common/IntToString.cpp
        ${P7ZIP_SRC}/CPP/Common/ListFileUtils.cpp
        ${P7ZIP_SRC}/CPP/Common/StdInStream.cpp
        ${P7ZIP_SRC}/CPP/Common/StdOutStream.cpp
        ${P7ZIP_SRC}/CPP/Common/MyString.cpp
        ${P7ZIP_SRC}/CPP/Common/MyWindows.cpp
        ${P7ZIP_SRC}/CPP/Common/StringConvert.cpp
        ${P7ZIP_SRC}/CPP/Common/StringToInt.cpp
        ${P7ZIP_SRC}/CPP/Common/UTFConvert.cpp
        ${P7ZIP_SRC}/CPP/Common/MyVector.cpp
        ${P7ZIP_SRC}/CPP/Common/MyMap.cpp
        ${P7ZIP_SRC}/CPP/Common/MyXml.cpp
        ${P7ZIP_SRC}/CPP/Windows/Error.cpp
        ${P7ZIP_SRC}/CPP/Windows/FileDir.cpp
        ${P7ZIP_SRC}/CPP/Windows/FileFind.cpp
        ${P7ZIP_SRC}/CPP/Windows/FileIO.cpp
        ${P7ZIP_SRC}/CPP/Windows/FileName.cpp
        ${P7ZIP_SRC}/CPP/Windows/PropVariant.cpp
        ${P7ZIP_SRC}/CPP/Windows/PropVariantUtils.cpp
        ${P7ZIP_SRC}/CPP/Windows/PropVariantConversions.cpp
        ${P7ZIP_SRC}/CPP/Windows/Synchronization.cpp
        ${P7ZIP_SRC}/CPP/Windows/System.cpp
        ${P7ZIP_SRC}/CPP/Windows/Time.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/CreateCoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/CWrappers.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/FilePathAutoRename.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/FileStreams.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/FilterCoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/InBuffer.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/InOutTempBuffer.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/LimitedStreams.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/LockedStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/MemBlocks.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/MethodId.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/MethodProps.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/OffsetStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/OutBuffer.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/OutMemStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/ProgressMt.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/ProgressUtils.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/StreamBinder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/StreamObjects.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/StreamUtils.cpp
        ${P7ZIP_SRC}/CPP/7zip/Common/VirtThread.cpp
        ${P7ZIP_SRC}/CPP/7zip/UI/Common/LoadCodecs.cpp
        ${P7ZIP_SRC}/CPP/7zip/UI/Common/PropIDUtils.cpp
        ${P7ZIP_SRC}/CPP/7zip/UI/Console/ConsoleClose.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/ZHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Bz2Handler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/DeflateProps.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/GzHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/LzmaHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/PpmdHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/SplitHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/XzHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/CoderMixer2.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/CoderMixer2MT.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/CrossThreadProgress.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/DummyOutStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/FindSignature.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/HandlerOut.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/InStreamWithCRC.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/ItemNameUtils.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/MultiStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/OutStreamWithCRC.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/OutStreamWithSha1.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Common/ParseProperties.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zCompressionMode.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zDecode.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zEncode.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zExtract.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zFolderInStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zFolderOutStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zHandlerOut.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zHeader.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zOut.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zProperties.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zSpecStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zUpdate.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/7z/7zRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Cab/CabBlockInStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Cab/CabHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Cab/CabHeader.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Cab/CabIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Cab/CabRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/LzhHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/LzhDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Chm/ChmHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Chm/ChmHeader.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Chm/ChmIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Chm/ChmRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Udf/UdfHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Udf/UdfIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Udf/UdfRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Wim/WimHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Wim/WimHandlerOut.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Wim/WimIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Wim/WimRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/DebHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/RpmHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/XarHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/ArjHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/ArjDecoder1.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/ArjDecoder2.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/CpioHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Hfs/HfsHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Hfs/HfsIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Hfs/HfsRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Iso/IsoHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Iso/IsoHeader.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Iso/IsoIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Iso/IsoRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Nsis/NsisDecode.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Nsis/NsisHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Nsis/NsisIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Nsis/NsisRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Rar/RarHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Rar/RarHeader.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Rar/RarIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Rar/RarItem.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Rar/RarRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Rar/RarVolumeInStream.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Tar/TarHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Tar/TarHandlerOut.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Tar/TarHeader.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Tar/TarIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Tar/TarOut.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Tar/TarRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Tar/TarUpdate.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Zip/ZipAddCommon.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Zip/ZipHandler.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Zip/ZipHandlerOut.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Zip/ZipHeader.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Zip/ZipIn.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Zip/ZipItem.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Zip/ZipOut.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Zip/ZipUpdate.cpp
        ${P7ZIP_SRC}/CPP/7zip/Archive/Zip/ZipRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Bcj2Coder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Bcj2Register.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BcjCoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BcjRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BitlDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BranchCoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BranchMisc.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BranchRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/ByteSwap.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BZip2Crc.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BZip2Decoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BZip2Encoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/BZip2Register.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/CopyCoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/CopyRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Deflate64Register.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/DeflateDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/DeflateEncoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/DeflateRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/DeltaFilter.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Lzma2Decoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Lzma2Encoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Lzma2Register.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/ImplodeDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/ImplodeHuffmanDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/LzmaDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/LzmaEncoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/LzmaRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/LzOutWindow.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Lzx86Converter.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/LzxDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/PpmdDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/PpmdEncoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/PpmdRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/PpmdZip.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/QuantumDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Rar1Decoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Rar2Decoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Rar3Decoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/Rar3Vm.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/RarCodecsRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/ShrinkDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/ZDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Compress/ZlibDecoder.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/7zAes.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/7zAesRegister.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/HmacSha1.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/MyAes.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/Pbkdf2HmacSha1.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/RandGen.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/Rar20Crypto.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/RarAes.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/Sha1.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/WzAes.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/ZipCrypto.cpp
        ${P7ZIP_SRC}/CPP/7zip/Crypto/ZipStrong.cpp
        ${P7ZIP_SRC}/C/Bra.c
        ${P7ZIP_SRC}/C/Bra86.c
        ${P7ZIP_SRC}/C/BraIA64.c
        ${P7ZIP_SRC}/C/BwtSort.c
        ${P7ZIP_SRC}/C/HuffEnc.c
        ${P7ZIP_SRC}/C/LzFind.c
        ${P7ZIP_SRC}/C/LzFindMt.c
        ${P7ZIP_SRC}/C/LzmaDec.c
        ${P7ZIP_SRC}/C/LzmaEnc.c
        ${P7ZIP_SRC}/C/Sort.c
        ${P7ZIP_SRC}/C/Threads.c
        ${P7ZIP_SRC}/C/Aes.c
        ${P7ZIP_SRC}/C/Alloc.c
        ${P7ZIP_SRC}/C/Sha256.c
        ${P7ZIP_SRC}/C/7zCrc.c
        ${P7ZIP_SRC}/C/7zCrcOpt.c
        ${P7ZIP_SRC}/C/7zStream.c
        ${P7ZIP_SRC}/C/Delta.c
        ${P7ZIP_SRC}/C/Lzma2Dec.c
        ${P7ZIP_SRC}/C/Lzma2Enc.c
        ${P7ZIP_SRC}/C/MtCoder.c
        ${P7ZIP_SRC}/C/Ppmd7.c
        ${P7ZIP_SRC}/C/Ppmd7Dec.c
        ${P7ZIP_SRC}/C/Ppmd7Enc.c
        ${P7ZIP_SRC}/C/Ppmd8.c
        ${P7ZIP_SRC}/C/Ppmd8Dec.c
        ${P7ZIP_SRC}/C/Ppmd8Enc.c
        ${P7ZIP_SRC}/C/Xz.c
        ${P7ZIP_SRC}/C/XzCrc64.c
        ${P7ZIP_SRC}/C/XzDec.c
        ${P7ZIP_SRC}/C/XzEnc.c
        ${P7ZIP_SRC}/C/XzIn.c
        )

set(JBINDING_JAVAH_H_FILES
        ${JBINDING_SRC}/javah/net_sf_sevenzipjbinding_impl_InArchiveImpl.h
        ${JBINDING_SRC}/javah/net_sf_sevenzipjbinding_SevenZip.h
        )

add_definitions(-O2)

add_definitions(
        -D_FILE_OFFSET_BITS=64
        -D_LARGEFILE_SOURCE
        -D_REENTRANT
        -DENV_UNIX
        -DUNICODE
        -D_UNICODE
        -DBREAK_HANDLER
        -DBENCH_MT
        )

if(CMAKE_BUILD_TYPE MATCHES Debug)
    add_definitions(-D_DEBUG)
endif()

include_directories(${JBINDING_SRC}/PlatformUnix)
include_directories(${P7ZIP_SRC}/CPP/myWindows)
include_directories(${P7ZIP_SRC}/CPP/)
include_directories(${P7ZIP_SRC}/CPP/include_windows)
include_directories(${JBINDING_SRC}/javah)
include_directories(${JBINDING_SRC})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fmessage-length=0 -Wno-narrowing")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmessage-length=0 -Wno-narrowing")

add_library(${TARGET}
        SHARED
        ${JBINDING_CPP_FILES}
        ${P7ZIP_SOURCE_FILES}
        ${JBINDING_JAVAH_H_FILES}
        )

find_library(LOG-LIB
        log)
target_link_libraries(${TARGET}
        ${LOG-LIB})
